--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = esp01_1m
 framework = arduino
-lib_deps = blynkkk/Blynk@^1.1.0
+lib_deps = 
+	blynkkk/Blynk@^1.1.0
+	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^3.3.6
